feat: Adiciona suporte ao Spring Boot 4.0 com Prometheus, Grafana e observabilidade completa
BREAKING CHANGE: Spring Boot atualizado para 4.0.0, requer Java 21 e Jakarta EE

## Mudanças por Arquivo

### Core Classes

**ProjectGenerator.java**
- Modifica createDockerFiles() para gerar estrutura docker/ em src/main/docker
- Adiciona criação de docker-compose.yml consolidado
- Adiciona criação de pastas prometheus/, grafana/, postgres/
- Adiciona criação de Dockerfile na raiz do projeto

**TemplateLoader.java (NOVO)**
- Classe utilitária para carregar templates do classpath
- Implementa cache de templates para evitar leituras repetidas
- Tratamento de erros quando template não é encontrado

### Template Classes

**ApplicationTemplate.java**
- Refatora para usar TemplateLoader ao invés de strings hardcoded
- Remove strings de template inline
- Carrega templates de application-base.yml, application-profile-*.yml, application-test.yml

**DockerComposeTemplate.java**
- Adiciona renderMainDockerCompose() - docker-compose.yml consolidado
- Adiciona renderPrometheusConfig() - configuração do Prometheus
- Adiciona renderGrafanaDatasources() - datasources do Grafana
- Adiciona renderGrafanaDashboards() - dashboards do Grafana
- Adiciona renderPostgresInitSql() - script SQL de inicialização
- Adiciona renderDockerfile() - Dockerfile multi-stage
- Mantém métodos antigos como @Deprecated para compatibilidade

**JavaSourceTemplate.java**
- Refatora para usar TemplateLoader
- Remove todas as strings de template inline (743 linhas removidas)
- Carrega templates de arquivos em resources/templates/java/

**OpenApiTemplate.java**
- Refatora para usar TemplateLoader
- Remove strings de template inline
- Carrega template de resources/templates/openapi/

**PomTemplate.java**
- Refatora para usar TemplateLoader
- Remove string de template inline (369 linhas removidas)
- Carrega template de resources/templates/pom/pom.xml

**ReadmeTemplate.java**
- Refatora para usar TemplateLoader
- Remove 